this is my first JS Object hello world program

--- a/Object.html
+++ b/Object.html
@@ -10,7 +10,7 @@
     <script>
         let tv = { Size:55, Brand:"Samsung", cost:50000, material:"Plastic"}; //syntax to create an object
 
-        console.log(tv.Brand) //synrtax to pull one prop of the object
+        console.log(tv.Brand) //syntax to pull one prop of the object
     </script>
 
     
